# stealth-browser

./: .gitignore  README.md  pyproject.toml
reports/20260220_031447/: report.json
reports/20260220_032041/: report.json
reports/20260220_032658/: report.json
reports/20260220_033054/: report.json
reports/20260220_033317/: report.json
reports/20260220_033529/: report.json
reports/20260220_033655/: report.json
reports/20260220_033812/: report.json
reports/20260220_033844/: report.json
reports/20260220_111821/: report.json
reports/20260220_111944/: report.json
reports/20260220_112156/: report.json
reports/20260220_112334/: report.json
reports/20260220_113509/: report.json
reports/20260220_113544/: report.json
reports/20260220_113919/: report.json
reports/20260220_115956/: report.json
reports/20260220_120107/: report.json
reports/20260220_120114/: report.json
reports/20260220_120312/: report.json
reports/20260223_004752/: report.json
reports/20260223_045624/: report.json
reports/20260223_051013/: report.json
reports/20260223_051240/: report.json
reports/20260223_051739/: report.json
reports/20260224_034258/: report.json
src/stealth_browser/: __init__.py  browser.py  config.py  driver.py  element.py  engine.py  engine_selection.py  exceptions.py  geolocation.py  patchright.py  scripts.py  selectors.py  stealth_js.py  sync_bridge.py
src/stealth_browser/engines/: __init__.py  native_engine.py  patchright_engine.py  (+1 more)
tests/: test_native_engine.py  test_selectors.py  test_stealth_detection.py  test_sync_bridge.py  test_unified_browser.py
(+6 files in other folders)
